src/objects/CRM_Account_Address_Event_Out__e.object
<CustomObject>
    <description>Platform event invoked to publish Account and Address inserts and updates to Kafka.</description>
    <fields>
        <fullName>accountIDToMergeTo__c</fullName>
        <label>accountIDToMergeTo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountID__c</fullName>
        <label>accountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountSubType__c</fullName>
        <label>accountSubType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountType__c</fullName>
        <label>accountType</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address1__c</fullName>
        <label>address1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address2__c</fullName>
        <label>address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address3__c</fullName>
        <label>address3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressID__c</fullName>
        <label>addressID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressType__c</fullName>
        <label>addressType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>author</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>birthDate__c</fullName>
        <label>birthDate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessEmail__c</fullName>
        <label>businessEmail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessName__c</fullName>
        <label>businessName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countryCode__c</fullName>
        <label>countryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dexcomID__c</fullName>
        <label>dexcomID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailOptin__c</fullName>
        <label>emailOptin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entityType__c</fullName>
        <label>entityType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventDate__c</fullName>
        <label>eventDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSourceID__c</fullName>
        <label>eventSourceID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSource__c</fullName>
        <label>eventSource</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>fax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>firstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guardianFirstName__c</fullName>
        <label>guardianFirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guardianLastName__c</fullName>
        <label>guardianLastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>homePhone__c</fullName>
        <label>homePhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>languageCode__c</fullName>
        <label>languageCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>lastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loginEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>loginEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mailOptin__c</fullName>
        <label>mailOptin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <description>Introduced in Account Canonical 2.0, this is the flexible field that can be used to add new data after approval from Integration Team but does not force any changes to the Event Structure.</description>
        <label>metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>middleName__c</fullName>
        <label>middleName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobilePhone__c</fullName>
        <label>mobilePhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nickName__c</fullName>
        <label>nickName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operation__c</fullName>
        <label>operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherPhone__c</fullName>
        <label>otherPhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentSystemOfOriginID__c</fullName>
        <label>parentSystemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payorName__c</fullName>
        <label>payorName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>personalEmail__c</fullName>
        <label>personalEmail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phoneOptin__c</fullName>
        <label>phoneOptin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prescriberID__c</fullName>
        <label>prescriberID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryPhone__c</fullName>
        <label>primaryPhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pumpManufacturer__c</fullName>
        <label>pumpManufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referenceNumber__c</fullName>
        <label>referenceNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smsOptin__c</fullName>
        <label>smsOptin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stateProvince__c</fullName>
        <label>stateProvince</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOriginID__c</fullName>
        <label>systemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOrigin__c</fullName>
        <label>systemOfOrigin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taxExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>taxExempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>taxRegistrationNumber__c</fullName>
        <label>taxRegistrationNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workPhone__c</fullName>
        <label>workPhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>CRM Account Address Event - Out</label>
    <pluralLabel>CRM Account Address Event - Out</pluralLabel>
</CustomObject>